Blog Post Update 2

--- a/index.html
+++ b/index.html
@@ -4,30 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello World</title>
+    <title>The JM Blog</title>
     <link rel="stylesheet" href="screen.css">
   </head>
   <body> 
-    <h1>Jack's Thoughts</h1>    
+    <h1>Dogs Addicted to Eating Metal, Plastic and Paper??</h1>    
     <img src="./Computer image.png" alt="Vintage Mac">
     <section>
-      <h2></h2>
-      <p>Test programs have always existed in software development, but the tradition of using "Hello, World!" as a test message was influenced by an example program in the 1978 book The C Programming Language. The example was taken from a 1974 Bell Laboratories internal memorandum by Brian Kernighan, one of the co-creators of the Unix operating system.</p>
+      <h2>Written by Jack Malatesta | Published October 15, 2024</h2>
+      <p>My dog Bailey just turned three (pictured above). He is a    beautiful golden retriever. He is a very loving and caring dog. He loves going on long walks and playing with toys and has a very high amount of energy. I love that quality specifically because it gives my parents the element of having a child in the house with my sister and I both being in college.
+        
+        He has many great qualities however one of his that always puzzled me. He seems to be addicted to chewing on and eating metal, plastic, and paper. My family first got him when he was a puppy, and we thought it was just a phase he would grow out of as he got older. He still to this day however will go through our trashes, grab stuff off tables and desks, and even eats the stuffing from his toys. We believed at first, he kept doing it because he wants attention, but he does it when no one is around. I decided to do some research to see if anyone online had seen common behaviors in their dog. I discovered that dogs could have a condition called pica. Pica is a compulsive behavior that can cause dogs to eat items like plastic, metal, and paper. Such an interesting condition. We still love Bailey even if he has pica. 
+      </p>
     </section>
-    <section>
-      <h2>Example</h2>
-      <p>Here is a JavaScript example:</p>
-      <code>
-        &lt;!DOCTYPE HTML&gt;
-        &lt;html>&gt;
-          &lt;body&gt;
-            &lt;script&gt;
-              alert('Hello, world!');
-            &lt;/script&gt;
-          &lt;/body&gt;
-        &lt;/html&gt;
-      </code>
-    </section>
-    <script src="index.js"></script>
   </body>
 </html>
