--- a/about.html
+++ b/about.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Page</title>
+    <title>About The Author</title>
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>About Page</h1>
+    <h2>This is Jack Malatesta</h2>
+    <img src="./AboutJack.png" alt="Jack Malatesta">
+    <section>
+    <p>Jack Malatesta is from Rochester, Michigan. He lived there up until 2011 when he moved to New Hampshire. Jack spent the rest of his childhood. Jack enjoys watching and playing sports, hanging out with friends, and traveling. 
+    </p>
+    </section>
+    <section>
+    <h2>Experience:</h2>
+    <p>Jack Malatesta is from Rochester, Michigan. He lived there up until 2011 when he moved to New Hampshire. Jack spent the rest of his childhood. Jack enjoys watching and playing sports, hanging out with friends, and traveling. </p>
+    <p>Jack is a senior attending Michigan State University. He is perusing a bachelors degree in information science and plans to graduate in the spring of 2025. In addition to perusing his degree Jack works part time at Potbelly Sandwich Works and is part of multiple clubs at MSU.</p>
+    </section>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
