--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <h1>Contact Page</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li<a href="index.html">Home</a></li>
         <li><a href="about.html" class="active">About</a></li>
       </ul>
     </nav>
