--- a/index.html
+++ b/index.html
@@ -18,4 +18,15 @@
       </p> 
     </section>
   </body>
+  <body>
+    <h1>Success of NFL Rookie Quarterbacks</h1>    
+    <section>
+      <h2>Written by Jack Malatesta | Published October 15, 2024</h2>
+      <p>The NFL is an extremely grueling league to play in. The level of adaptation it takes to go from college to the NFL is monstrous. It’s no surprise that for rookies sometimes development doesn’t happen overnight. It sometimes takes a few games or even a few seasons. Especially for the NFLs toughest position, quarterback. Since 2020 there has only been two rookie quarterbacks to lead their teams to the playoffs. This year’s rookie quarterback class however is off to a better start than most rookie quarterback classes. In this post I will give my thoughts on why that might be the case.
+      </p>
+      <p>Looking into the environment each quarterback is in they are very different. Some environments are better than others. For example, Caleb Williams and Jayden Daniels, the two top picks from this year’s draft are in arguably the best situations out of all the quarterbacks taken in the first round. They both have good coaches and good offensive personnel. It is unique for the two highest picks to be in such s good situation but that is the case this year. I credit that as a major reason for their success so far this season. The third overall pick Drake Maye I will not say anything about yet because he made his first start last week. It does not look promising for him because of the system he is in. Bo Nix has cooled down after his hot start. He does not have the best offensive system around him, but his coach has been known to get the best out of quarterbacks. I am interested to see how the season plays out for him.
+      </p> 
+    </section>
+
+  </body>
 </html>
