--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </body>
   <body>
     <h1>Success of NFL Rookie Quarterbacks</h1>    
+    <img src="./Lions Game.png" alt="Lions Game">
     <section>
       <h2>Written by Jack Malatesta | Published October 15, 2024</h2>
       <p>The NFL is an extremely grueling league to play in. The level of adaptation it takes to go from college to the NFL is monstrous. It’s no surprise that for rookies sometimes development doesn’t happen overnight. It sometimes takes a few games or even a few seasons. Especially for the NFLs toughest position, quarterback. Since 2020 there has only been two rookie quarterbacks to lead their teams to the playoffs. This year’s rookie quarterback class however is off to a better start than most rookie quarterback classes. In this post I will give my thoughts on why that might be the case.
