--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="screen.css">
   </head>
     <body> 
-      <main>
-        <h1>Dogs Addicted to Eating Metal, Plastic and Paper??</h1> 
+      <header>
+        <h1>JM's Blog</h1>
+        <p>Dogs Addicted to Eating Metal, Plastic and Paper??</p> 
+      </header>
         <section>
           <h2>Written by Jack Malatesta | Published October 15, 2024</h2>
           <img src="Bailey .png" alt="Bailey">
@@ -18,9 +20,12 @@
           <p>He has many great qualities however one of his that always puzzled me. He seems to be addicted to chewing on and eating metal, plastic, and paper. My family first got him when he was a puppy, and we thought it was just a phase he would grow out of as he got older. He still to this day however will go through our trashes, grab stuff off tables and desks, and even eats the stuffing from his toys. We believed at first, he kept doing it because he wants attention, but he does it when no one is around. I decided to do some research to see if anyone online had seen common behaviors in their dog. I discovered that dogs could have a condition called pica. Pica is a compulsive behavior that can cause dogs to eat items like plastic, metal, and paper. Such an interesting condition. We still love Bailey even if he has pica.
           </p> 
         </section>
-        </body>
-        <body>
-        <h1>Success of NFL Rookie Quarterbacks</h1>    
+    </body>
+    <body>
+      <header>
+        <h1>JM's Blog</h1>
+        <p>Success of NFL Rookie Quarterbacks</p> 
+      </header>  
         <img src="./Lions Game.png" alt="Lions Game">
         <section>
           <h2>Written by Jack Malatesta | Published October 15, 2024</h2>
@@ -29,7 +34,6 @@
           <p>Looking into the environment each quarterback is in they are very different. Some environments are better than others. For example, Caleb Williams and Jayden Daniels, the two top picks from this year’s draft are in arguably the best situations out of all the quarterbacks taken in the first round. They both have good coaches and good offensive personnel. It is unique for the two highest picks to be in such s good situation but that is the case this year. I credit that as a major reason for their success so far this season. The third overall pick Drake Maye I will not say anything about yet because he made his first start last week. It does not look promising for him because of the system he is in. Bo Nix has cooled down after his hot start. He does not have the best offensive system around him, but his coach has been known to get the best out of quarterbacks. I am interested to see how the season plays out for him.
           </p> 
         </section>
-      </main>
     </body>
   </head>
 </html>
