--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The JM Blog</title>
+    <a title="About The Author" href="about.html">google</a>
     <link rel="stylesheet" href="screen.css">
   </head>
     <body> 
