Links to all sites

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The JM Blog</title>
     <a title="About The Author" href="about.html">About The Author</a>
+    <a title="Contact Information" href="contact.html">Contact Information</a>
   </head>
     <body> 
       <header>
