--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact Page</title>
-    <link rel="stylesheet" href="screen.css">
+    <title>About The Author</title>
+    <a title="About the Author" href="about.html">About the Author</a>
+    <a title="Blog Posts" href="index.html">Blog Posts</a>
+    <body>
+      <h2>Contact Information</h2>
+    </body>
   </head>
-  <body>
-    <h1>Contact Page</h1>
-    <nav>
-      <ul>
-        <li<a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-      </ul>
-    </nav>
-    <script src="index.js"></script>
-  </body>
 </html>
