Updating List Again

--- a/about.html
+++ b/about.html
@@ -13,9 +13,7 @@
       <section>
         <p>Jack Malatesta is from Rochester, Michigan. He lived there up until 2011 when he moved to New Hampshire. Jack spent the rest of his childhood. Jack enjoys watching and playing sports, hanging out with friends, and traveling. He has had 3 types of pets throughout his life.
         </p>
-        <ul>4 Dogs 
-          1 Cat 
-          A lot of Fish</ul>
+        <ul>4 Dogs, 1 Cat, A lot of Fish</ul>
       </section>
       <section>
         <h2>Experience:</h2>
