--- a/about.html
+++ b/about.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About The Author</title>
-    <a title="Blog Posts" href="index.html">Blog Posts</a>
-    <a title="Contact Information" href="contact.html">Contact Information</a>
+  </head>
     <body>
+      <a title="Blog Posts" href="index.html">Blog Posts</a>
+      <a title="Contact Information" href="contact.html">Contact Information</a>
       <h2>This is Jack Malatesta</h2>
       <img src="./AboutJack.png" alt="Jack Malatesta">
       <section>
         <p>Jack Malatesta is from Rochester, Michigan. He lived there up until 2011 when he moved to New Hampshire. Jack spent the rest of his childhood. Jack enjoys watching and playing sports, hanging out with friends, and traveling. He has had 3 types of pets throughout his life.
         </p>
-        <ul>4 Dogs, 1 Cat, A lot of Fish</ul>
+        <li>4 Dogs, 1 Cat, A lot of Fish</li>
       </section>
       <section>
         <h2>Experience:</h2>
-        <p>Jack is a senior attending Michigan State University. He is perusing a bachelors degree in information science and plans to graduate in the spring of 2025. In addition to perusing his degree Jack works part time at Potbelly Sandwich Works and is part of multiple clubs at MSU.</p>
+        <p>Jack is a senior attending Michigan State University. He is persuing a bachelors degree in information science and plans to graduate in the spring of 2025. In addition to persuing his degree Jack works part time at Potbelly Sandwich Works and is part of multiple clubs at MSU.</p>
       </section>
     </body>
-  </head>
 </html>
