--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The JM Blog</title>
+    <link rel="stylesheet" href="blog.css">
   </head>
     <body> 
       <a title="About The Author" href="about.html">About The Author</a>
@@ -21,8 +22,6 @@
           <p>He has many great qualities however one of his that always puzzled me. He seems to be addicted to chewing on and eating metal, plastic, and paper. My family first got him when he was a puppy, and we thought it was just a phase he would grow out of as he got older. He still to this day however will go through our trashes, grab stuff off tables and desks, and even eats the stuffing from his toys. We believed at first, he kept doing it because he wants attention, but he does it when no one is around. I decided to do some research to see if anyone online had seen common behaviors in their dog. I discovered that dogs could have a condition called pica. Pica is a compulsive behavior that can cause dogs to eat items like plastic, metal, and paper. Such an interesting condition. We still love Bailey even if he has pica.
           </p> 
         </section>
-    </body>
-    <body>
       <header>
         <h1>JM's Blog</h1>
         <h2>Success of NFL Rookie Quarterbacks</h2> 
