--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About The Author</title>
+    <link rel="stylesheet" href="blog.css">
     <body>
       <a title="About the Author" href="about.html">About the Author</a>
       <a title="Blog Posts" href="index.html">Blog Posts</a>
