Changes to contact and about

--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About The Author</title>
     <link rel="stylesheet" href="blog.css">
-    <body>
-      <a title="About the Author" href="about.html">About the Author</a>
-      <a title="Blog Posts" href="index.html">Blog Posts</a>
-      <h2>Contact Information</h2>
-    </body>
   </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a title="About The Author" href="index.html">Blog Posts</a></li>
+          <li><a title="Contact Information" href="contact.html">Contact Information</a></li>
+        </ul>
+      </nav>
+    </header>
+    <h1>Contact Information</h1>
+  </body>
 </html>
