--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
             </p>
             <p>Looking into the environment each quarterback is in they are very different. Some environments are better than others. For example, Caleb Williams and Jayden Daniels, the two top picks from this year’s draft are in arguably the best situations out of all the quarterbacks taken in the first round. They both have good coaches and good offensive personnel. It is unique for the two highest picks to be in such s good situation but that is the case this year. I credit that as a major reason for their success so far this season. The third overall pick Drake Maye I will not say anything about yet because he made his first start last week. It does not look promising for him because of the system he is in. Bo Nix has cooled down after his hot start. He does not have the best offensive system around him, but his coach has been known to get the best out of quarterbacks. I am interested to see how the season plays out for him.
             </p> 
+            <table>
+              <tr>
+                <th>QB:</th>
+                <th>Stats</th>
+              </tr>
+              <tr>
+                <td>Caleb Williams</td>
+                <td>1200 yards 9 TDs</td>
+              </tr>
+              <tr>
+                <td>Jayden Daniels</td>
+                <td>1400 yards 12 TDs</td>
+              </tr>
+            </table>
           </article>
         </section>
     </body>
