--- a/index.html
+++ b/index.html
@@ -54,5 +54,13 @@
       </table>
     </article>
   </section>
+  <section>
+    <form>
+      <label>Sign up for the JM newsletter:
+        <input type="text">
+      </label>
+      <button>Sign up</button>
+    </form>
+  </section>
 </body>
 </html>
