--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,21 @@
         </ul>
       </nav>
     </header>
-    <h1>Contact Information</h1>
+    <h1>Contact Form</h1>
+    <form>
+      <label>Name:
+        <input type="text">
+      </label>
+      <label>Email Address:
+        <input type="text">
+      </label>
+      <label>Reason for Contact:
+        <input type="text">
+      </label>
+      <label>Comments:
+        <input type="text">
+      </label>
+      <button>Submit</button>
+    </form>
   </body>
 </html>
