--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <p>Inside the mind of Jack Malatesta</p>
     <nav>
       <ul>
-        <li><a title="About The Author" href="index.html">Blog Posts</a></li>
+        <li><a title="Blog Posts" href="index.html">Blog Posts</a></li>
         <li><a title="Contact Information" href="contact.html">Contact Information</a></li>
       </ul>
     </nav>
