--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
     <header>
       <nav>
         <ul>
-          <li><a title="About The Author" href="about.html">Blog Posts</a></li>
-          <li><a title="Blog Posts" href="index.html">Contact Information</a></li>
+          <li><a title="About The Author" href="about.html">About the Author</a></li>
+          <li><a title="Blog Posts" href="index.html">Blog Posts</a></li>
         </ul>
       </nav>
     </header>
